--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -55,37 +55,11 @@
 <section class="content">
 <header>
 <h1>Org 스프레드시트</h1>
-<div class="title-date">2020년 4월 18일 수정</div>
+<div class="title-date">2020년 6월 26일 수정</div>
 </header>
-<div id="table-of-contents">
-<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
-<ul>
-<li><a href="#0bbb90e1">외부 링크</a></li>
-</ul>
-</div>
-</div>
 <p>
-<a href="org-mode.html">Org Mode</a>의 테이블은 다양한 기능을 제공한다.
-그 중 하나가 테이블 셀을 이용해 계산을 하는 것이다.
+이 글은 낡아서 사라질 예정이며 대신 <a href="org-table-spreadsheet.html">Org 테이블 스프레드시트</a> 글을 참고하자.
 </p>
-
-<p>
-이 글은 추후 업데이트 될 예정이다.
-</p>
-
-<p>
-궁금하다면 <a target="_blank" href="https://seorenn.tistory.com/70">🌏Org Mode 테이블 스프레드시트</a>
-글을 참고하자.
-</p>
-
-<div id="outline-container-0bbb90e1" class="outline-2">
-<h2 id="0bbb90e1">외부 링크</h2>
-<div class="outline-text-2" id="text-0bbb90e1">
-<ul class="org-ul">
-<li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
-</ul>
-</div>
-</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
@@ -96,16 +70,6 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
-<div class="backlinks-container">
-<hr /><h1>이 글을 링크하는 글들</h1>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-syntax.html">Org 문법 정리</a></h2>
-<div class="article-link-date">
-2020년 6월 26일 수정</div>
-</div>
-</div>
 </div>
 </section>
 <div class="side-ad-container">
