--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -343,6 +343,13 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-table-spreadsheet.html">Org 테이블 스프레드시트</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
