--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -510,6 +510,13 @@ Unused lexical argument 'bar'
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-table-spreadsheet.html">Org 테이블 스프레드시트</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/ielm.html">ielm</a></h2>
 <div class="article-link-date">
 2020년 6월 8일 수정</div>
