update with 1 changes

--- a/note/org-table-spreadsheet.html
+++ b/note/org-table-spreadsheet.html
@@ -380,7 +380,7 @@ I*2 |$1-----+$2-----+$3-----+$4-------|
 </p>
 
 <p>
-그리고 TBLFM의 가장 마지막 항목을 아래처럼 고쳐봤습니다.
+그리고 TBLFM의 가장 마지막 항목을 아래처럼 고쳐봤다.
 </p>
 <div class="org-src-container">
 <pre class="src src-org-mode">#+TBLFM: $4=$3-$2::@5$2..@5$4=vsum(@2..@4)
@@ -410,6 +410,10 @@ I*2 |$1-----+$2-----+$3-----+$4-------|
 
 <p>
 이상한 경고 메시지가 뜨긴 하는데 뭐 잘 되었으니 무시하자.😏
+</p>
+
+<p>
+어쨌거나 이제 우리는 완벽한(?) 테이블 스프레드시트를 하나 만들었다. 참 먼 길이었다. 역시 구글 스프레드시트나 Numbers를 쓰는게 현명할 것 같다.
 </p>
 </div>
 </div>
