--- a/index.html
+++ b/index.html
@@ -64,13 +64,6 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
-<div class="article-link-date">
-2020년 6월 26일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-syntax.html">Org 문법 정리</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
@@ -261,6 +254,13 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/web-dev-links.html">웹 개발 관련 링크</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
 </div>
