--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/english-note.html">영어 노트</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rsvp.html">RSVP</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/ios-macos-dev-links.html">iOS, macOS 개발 관련 링크</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
@@ -444,13 +458,6 @@
 <h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
 <div class="article-link-date">
 2020년 6월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/english-note.html">영어 노트</a></h2>
-<div class="article-link-date">
-2020년 6월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
