--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -322,6 +322,16 @@ Org Publish의 프로젝트 설정은 <code>org-publish-project-alist</code> 라
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
+</div>
 </section>
 <div class="side-ad-container">
 <ins class="adsbygoogle side-ad"
