--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
