update with 12 changes

--- a/note/python.html
+++ b/note/python.html
@@ -61,11 +61,7 @@
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
 <li><a href="#f6c3e57e">설치</a></li>
-<li><a href="#db81cb90">버전 별 정리</a>
-<ul>
-<li><a href="#80a938c3">3.8</a></li>
-</ul>
-</li>
+<li><a href="#db81cb90">버전 별 정리</a></li>
 <li><a href="#3d558e5f">Bytes 관련 팁</a></li>
 <li><a href="#8818473f">사전(Dictionary)형 관련 팁</a>
 <ul>
@@ -116,25 +112,9 @@
 <div id="outline-container-db81cb90" class="outline-2">
 <h2 id="db81cb90">버전 별 정리</h2>
 <div class="outline-text-2" id="text-db81cb90">
-</div>
-<div id="outline-container-80a938c3" class="outline-3">
-<h3 id="80a938c3">3.8</h3>
-<div class="outline-text-3" id="text-80a938c3">
-<dl class="org-dl">
-<dt><code>:=</code> (Walrus) 오페레이터</dt><dd>좁은(?) 지역 변수.
-<a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷하다.
-조건문 뿐만 아니라 List Comprehension 등에서도 활용이 가능하다.</dd>
-<dt>f-string 추가 표현식</dt><dd><code>f'name={value}'</code> 대신 <code>f'{name</code>}'= 문법을 사용할 수
-있다.
-관련된 내용은 <a target="_blank" href="https://seorenn.tistory.com/76">🌏Python에 F-string 이라는 게 있었다?</a> 글을 참고해보자.</dd>
-<dt><code>/</code> 오퍼레이터</dt><dd>함수 매개변수 리스트 구분자.
-<code>f(a, b, /, c, d, *, e, f)</code> 매개변수를 나열할 때
-<code>/</code> 앞쪽은 위치로만 표기 가능하며,
-<code>/</code> 와 <code>*</code> 사이는 위치와 키워드 관계 없이 사용 가능,
-<code>*</code> 이후는 키워드 표기법만 사용 가능하다.
-각각은 별도로도 사용 가능하다.</dd>
-</dl>
-</div>
+<ul class="org-ul">
+<li><a href="python-3-8-updates.html">Python 3.8 업데이트 내역</a></li>
+</ul>
 </div>
 </div>
 <div id="outline-container-3d558e5f" class="outline-2">
@@ -266,6 +246,13 @@ Python 3 부터 사용 가능한 커맨드다.
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-3-8-updates.html">Python 3.8 업데이트 내역</a></h2>
+<div class="article-link-date">
+2020년 6월 26일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-file-dir-tips.html">Python으로 파일의 경로 및 목록 다루기</a></h2>
