--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -343,14 +343,14 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
