--- a/note/emacs.html
+++ b/note/emacs.html
@@ -471,14 +471,14 @@ Overview of search tools for desktop and mobile; using Emacs and Ripgrep as desk
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
