--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -71,7 +71,7 @@
 </div>
 </div>
 <p>
-org-publish는 <a href="emacs.html">Emacs</a>에서 <a href="org-mode.html">Org Mode</a>로 작성된 .org 문서들로 정적 웹사이트를 만들 수 있게 자동화 해주는 도구다. 특정 디렉토리 안의 <code>.org</code> 파일들을 <code>.html</code> 파일로 익스포트 해서 원하는 디렉터리로 복사해 준다. 그리고 각종 <a href="css.html">CSS</a>나 스크립트, 이미지 등의 파일도 자동으로 복사해 준다.
+Org Publish는 <a href="emacs.html">Emacs</a>에서 <a href="org-mode.html">Org Mode</a>로 작성된 .org 문서들로 정적 웹사이트를 만들 수 있게 자동화 해주는 도구다. 특정 디렉토리 안의 <code>.org</code> 파일들을 <code>.html</code> 파일로 익스포트 해서 원하는 디렉터리로 복사해 준다. 그리고 각종 <a href="css.html">CSS</a>나 스크립트, 이미지 등의 파일도 자동으로 복사해 준다.
 </p>
 
 <div id="outline-container-d3118865" class="outline-2">
