update with 5 changes

--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -70,7 +70,7 @@
 </div>
 </div>
 <p>
-이 글은 <a href="python.html">Python</a>의 딕셔너리 타입(Dictionary Type, 사전형)과 관련된 내용을 정리한다. 그리고 3.7 혹은 그 이상의 버전에서 주로 동작하는 예제들을 사용한다.
+이 글은 <a href="python.html">Python</a>의 딕셔너리 타입(Dictionary Type, 사전형)과 관련된 내용을 정리한다. 예제 코드는 3.7 혹은 그 이상의 버전이 아니면 작동하지 않을 수도 있으니 주의하자.
 </p>
 
 <div id="outline-container-e41c01b8" class="outline-2">
@@ -81,7 +81,7 @@
 </p>
 
 <p>
-보통 이런 종류의 자료구조로 사전형이라 부르는 타입과 동일하거나 혹은 해시맵(Hash Map)과 유사하다.
+보통 이런 종류의 자료구조로 사전형이라 부르는 타입과 동일하거나 혹은 해시맵(Hash Map), 해시테이블(Hash Table)등의 자료구조와 유사하다.
 </p>
 </div>
 </div>
@@ -95,6 +95,10 @@
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">d</span> = {}
 </pre>
 </div>
+<p>
+중괄호는 <a href="python.html">Python</a>에서 딕셔너리 타입을 정의할 때 주로 사용되기 때문에 중괄호는 곧 딕셔너리라고 인식해도 크게 틀리진 않는다.
+</p>
+
 <p>
 이제 특정 키를 이용해 값을 쓸 수 있다.
 </p>
