--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -66,6 +66,7 @@
 <li><a href="#c1047d87">딕셔너리끼리 합치기</a></li>
 <li><a href="#f0fbc795">딕셔너리에 다른 딕셔너리를 풀어 넣기</a></li>
 <li><a href="#b83786de">순회하기</a></li>
+<li><a href="#e857bc27">참고</a></li>
 </ul>
 </div>
 </div>
@@ -144,7 +145,7 @@
 <h2 id="f73af557">키 읽기, 쓰기, 수정, 삭제</h2>
 <div class="outline-text-2" id="text-f73af557">
 <p>
-키를 읽을 때는 배열 원소 참조하는 것과 비슷하지만 인덱스 대신 키를 사용한다.
+키의 값을 읽을 때는 배열 원소 참조하는 것과 비슷한 문법을 사용하지만 인덱스 대신 키를 사용한다는 점이 다르다.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">print</span>(d[<span style="color: #98be65;">'key'</span>])
@@ -152,7 +153,7 @@ value
 </pre>
 </div>
 <p>
-이 경우 없는 키를 읽으려고 하면 <code>KeyError</code> 예외가 발생한다.
+만약 없는 키를 읽으려고 하면 <code>KeyError</code> 예외가 발생한다.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">print</span>(d[<span style="color: #98be65;">'unknown'</span>])
@@ -162,7 +163,7 @@ Traceback (most recent call last):
 </pre>
 </div>
 <p>
-굳이 예외처리를 하고 싶지 않다면 키가 없을 때 기본 값을 지정할 수 있는 <code>get()</code> 메서드를 활용해서 값을 읽는 편이 편하다.
+굳이 예외처리를 하고 싶지 않다면 키가 없을 때의 기본 값을 지정할 수 있는 <code>get()</code> 메서드를 활용해서 값을 읽는 것이 편하다.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">print</span>(d.get(<span style="color: #98be65;">'key'</span>))
@@ -174,11 +175,11 @@ no key
 </pre>
 </div>
 <p>
-<code>get()</code> 메서드는 기본적으로 키가 없을 경우 <code>None</code> 을 리턴한다.
+<code>get()</code> 메서드의 두 번째 인자가 기본값이며 이 값이 지정되지 않은 경우는 <code>None</code> 이 기본값이 된다.
 </p>
 
 <p>
-값을 쓰는 것은 인스턴스 생성에서도 나왔다.
+값을 쓰는 것은 제일 처음의 읽는 방법과 비슷하다.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">d</span>[<span style="color: #98be65;">'a'</span>] = <span style="color: #98be65;">'aaa'</span>
@@ -279,6 +280,29 @@ Immutable 작업 스타일로 쓸 수가 있어서 병렬 처리 환경에서도
 </div>
 <p>
 이 외에 값들만 순회하고자 한다면 <code>values()</code> 메서드를 이용할 수도 있다. 하지만 그다지 쓸 일은 잘 없을 것 같다.
+</p>
+</div>
+</div>
+<div id="outline-container-e857bc27" class="outline-2">
+<h2 id="e857bc27">참고</h2>
+<div class="outline-text-2" id="text-e857bc27">
+<p>
+요즘은 왠만해선 딕셔너리나 해시테이블 등의 자료구조에서 키를 문자열 형태로 사용하는 게 일반적이지만, 꼭 문자열만 키로 쓸 수 있는 것은 아니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">a</span> = {<span style="color: #da8548; font-weight: bold;">1</span>: <span style="color: #da8548; font-weight: bold;">100</span>, <span style="color: #da8548; font-weight: bold;">2</span>:<span style="color: #da8548; font-weight: bold;">200</span>}
+&gt;&gt;&gt; a
+{<span style="color: #da8548; font-weight: bold;">1</span>: <span style="color: #da8548; font-weight: bold;">100</span>, <span style="color: #da8548; font-weight: bold;">2</span>: <span style="color: #da8548; font-weight: bold;">200</span>}
+&gt;&gt;&gt; a[<span style="color: #da8548; font-weight: bold;">1</span>]
+<span style="color: #da8548; font-weight: bold;">100</span>
+</pre>
+</div>
+<p>
+키를 정수로 지정하면 배열과 거의 같은 모습을 구경할 수 있기도 하다.
+</p>
+
+<p>
+물론 문자열이 아무래도 활용성이 좋으니 문자열 외의 타입을 키로 사용하는 일은 흔하진 않을 것이다. 아마도&#x2026;
 </p>
 </div>
 </div>
