update with 1 changes

--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -103,12 +103,13 @@
 <p>
 이제 특정 키를 이용해 값을 쓸 수 있다.
 </p>
-<pre class="example">
-&gt;&gt;&gt; d['key'] = 'value'
-&gt;&gt;&gt; d['other'] = 123
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">d</span>[<span style="color: #98be65;">'key'</span>] = <span style="color: #98be65;">'value'</span>
+&gt;&gt;&gt; <span style="color: #dcaeea;">d</span>[<span style="color: #98be65;">'other'</span>] = <span style="color: #da8548; font-weight: bold;">123</span>
 &gt;&gt;&gt; d
-{'key': 'value', 'other': 123}
+{<span style="color: #98be65;">'key'</span>: <span style="color: #98be65;">'value'</span>, <span style="color: #98be65;">'other'</span>: <span style="color: #da8548; font-weight: bold;">123</span>}
 </pre>
+</div>
 <p>
 물론 한 번에 바로 생성할 수도 있다.
 </p>
