--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -71,7 +71,7 @@
 </div>
 </div>
 <p>
-이 글은 <a href="python.html">Python</a>의 딕셔너리 타입(Dictionary Type, 사전형)과 관련된 내용을 정리한다. 예제 코드는 3.7 혹은 그 이상의 버전이 아니면 작동하지 않을 수도 있으니 주의하자.
+이 글은 <a href="python.html">Python</a>의 딕셔너리 타입(Dictionary Type, 사전형)과 관련된 내용을 정리한다. 예제 코드는 3.7 버전에서만 돌려봤지만 아마도 2.x 버전에서도 별 문제 없이 실행 가능할거라 생각된다.
 </p>
 
 <div id="outline-container-e41c01b8" class="outline-2">
