update with 7 changes

--- a/note/python-dictionary.html
+++ b/note/python-dictionary.html
@@ -227,7 +227,7 @@ no key
 </pre>
 </div>
 <p>
-<code>update()</code> 메서드는 원본을 변조하는 파괴적인(destructive)한 방법이라 병렬 처리 시 인스턴스의 레퍼런스가 다른 태스크에서도 공유된다면 조심해서 사용해야 할 것 같다.
+<code>update()</code> 메서드는 원본을 변조하는 파괴적인(destructive) 방법이라 병렬 처리 시 인스턴스의 레퍼런스가 다른 태스크에서도 공유된다면 조심해서 사용해야 할 것 같다.
 </p>
 
 <p>
@@ -324,7 +324,7 @@ Immutable 작업 스타일로 쓸 수가 있어서 병렬 처리 환경에서도
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
-2020년 6월 27일 수정</div>
+2020년 6월 28일 수정</div>
 </div>
 </div>
 </div>
