--- a/note/python-bytes-and-bytearray.html
+++ b/note/python-bytes-and-bytearray.html
@@ -188,7 +188,19 @@ Traceback (most recent call last):
 </p>
 
 <p>
-이 외에도 리스트를 다루던 것과 비슷한 방식을 쓸 수 있다. 예를 들어 슬라이스나 for 루프로 순환하기 등등 말이다.
+이 외에도 여러가지 방법으로 바이트 배열을 변조할 수 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; ba.append(<span style="color: #c678dd;">ord</span>(<span style="color: #98be65;">'e'</span>))
+&gt;&gt;&gt; ba
+<span style="color: #c678dd;">bytearray</span>(b<span style="color: #98be65;">'ABcde'</span>)
+&gt;&gt;&gt; <span style="color: #51afef;">del</span>(ba[<span style="color: #da8548; font-weight: bold;">4</span>])
+&gt;&gt;&gt; ba
+<span style="color: #c678dd;">bytearray</span>(b<span style="color: #98be65;">'ABcd'</span>)
+</pre>
+</div>
+<p>
+마치 리스트를 다루던 것과 비슷한 방식은 비슷하게 쓸 수 있다. 예를 들어 슬라이스나 for 루프로 순환하기 등등 말이다.
 </p>
 
 <p>
@@ -204,11 +216,11 @@ Traceback (most recent call last):
 </p>
 
 <p>
-사실 문자열이라는 것은 바이트 배열과 딱 일치하는 C 스타일 문자열이 기본이긴 하지만, 우리가 실제로 쓰는 문자열은 유니코드 문자를 사용한다. 그래서 바이트 단위로 구성되는 C 문자열을 그대로 문자열로 변환하는 것은 이상한 행위다.
+사실 우리가 쓰는 문자열은 유니코드 문자를 사용한다. 그래서 바이트 배열로 구성되는 C 문자열을 그대로 문자열로 변환하는 것은 이상한 행위다.
 </p>
 
 <p>
-<code>bytearray</code> 는 문자열 기준으로 인코딩 되어있다고 생각하면 될 것 같다. 즉 디코딩하면 문자열을 얻을 수 있다.
+<code>bytearray</code> 는 문자열 기준으로 인코딩 되어있다고 생각하면 될 것 같다. 즉 디코딩하면 문자열을 얻을 수도 있다. 물론 내용물이 문자열에 적합할 경우이지만 말이다.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; ba.decode()
