update with 1 changes

--- a/note/python-bytes-and-bytearray.html
+++ b/note/python-bytes-and-bytearray.html
@@ -214,16 +214,23 @@ Traceback (most recent call last):
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">b</span> = b<span style="color: #98be65;">'abcd'</span>
 &gt;&gt;&gt; <span style="color: #c678dd;">str</span>(b)
-<span style="color: #98be65;">"b'abcd'</span>
-<span style="color: #98be65;">"</span><span style="color: #5B6268;">#</span><span style="color: #5B6268;">+END_SRC</span>
-&#50500;... &#47956;&#44032; &#46104;&#44592;&#45716; &#54616;&#45716;&#45936; &#51648;&#44552; &#50896;&#54616;&#45716; &#44163;&#51008; &#51200;&#44172; &#50500;&#45768;&#45796;. &#44536;&#47111;&#45796;&#47732; &#50612;&#46523;&#44172; &#54644;&#50556; &#54624;&#44620;?
+<span style="color: #98be65;">"b'abcd'"</span>
+</pre>
+</div>
+<p>
+아&#x2026; 뭔가 되기는 하는데 지금 원하는 것은 저게 아니다. 그렇다면 어떻게 해야 할까?
+</p>
 
-&#49324;&#49892; &#50864;&#47532;&#44032; &#50416;&#45716; &#47928;&#51088;&#50676;&#51008; &#50976;&#45768;&#53076;&#46300; &#47928;&#51088;&#47484; &#49324;&#50857;&#54620;&#45796;. &#44536;&#47000;&#49436; &#48148;&#51060;&#53944; &#48176;&#50676;&#47196; &#44396;&#49457;&#46104;&#45716; C &#47928;&#51088;&#50676;&#51012; &#44536;&#45824;&#47196; &#47928;&#51088;&#50676;&#47196; &#48320;&#54872;&#54616;&#45716; &#44163;&#51008; &#51060;&#49345;&#54620; &#54665;&#50948;&#45796;.
+<p>
+사실 우리가 쓰는 문자열은 유니코드 문자를 사용한다. 그래서 바이트 배열로 구성되는 C 문자열을 그대로 문자열로 변환하는 것은 이상한 행위다.
+</p>
 
-&#45796;&#54665;&#55176;&#46020; &#54644;&#45813;&#51008; &#51080;&#45796;. &#51060; <span style="color: #dcaeea;">&#44221;&#50864;</span> =<span style="color: #c678dd;">bytes</span>= <span style="color: #dcaeea;">&#45208;</span> =<span style="color: #c678dd;">bytearray</span>= &#47484; decode&#54616;&#47732; &#45796;&#49884; &#50896;&#47000;&#51032; &#47928;&#51088;&#50676;&#51012; &#50619;&#51012; &#49688;&#46020; &#51080;&#45796;.
-<span style="color: #5B6268;">#</span><span style="color: #5B6268;">+BEGIN_SRC python</span>
-&gt;&gt;&gt; b.decode()
-<span style="color: #98be65;">'abcd'</span>
+<p>
+다행히도 해답은 있다. 이 경우 <code>bytes</code> 나 <code>bytearray</code> 를 decode하면 다시 원래의 문자열을 얻을 수도 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; b.decode()
+<span style="color: #83898d;">'abcd'</span>
 </pre>
 </div>
 <p>
