update with 9 changes

--- a/note/javascript.html
+++ b/note/javascript.html
@@ -55,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 6월 15일 수정</div>
+<div class="title-date">2020년 6월 28일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -84,6 +84,7 @@
 <li><a href="#8c91cb46">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
+<li><a href="#129c57bd">주제별 글들</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
@@ -92,14 +93,14 @@
 자바스크립트(Javascript)는 웹 브라우저에서 동작하는 스크립트 언어다.
 뭔가 부족한 듯한 소개지만 사실상 모든 것을 대변하는 말이다.
 물론 현재는 웹 브라우저 뿐만 아니라 엔진만 떼어내면
-뭐든 할 수 있는 플랫폼으로 인식될 정도로 많이 쓰이는 언어이긴 하다.
+뭐든 할 수 있는 플랫폼으로 인식될 정도로 많이 쓰이는 언어이기도 해서 이 정의는 틀렸지만 말이다.
 </p>
 
 <p>
 이 글에서는 Javascript 뿐만 아니라 ECMAScript를 함께 다룬다.
 개념 상 이 둘은 다르게 취급하는 것이 맞겠지만,
 현재로써 이 둘을 별도로 생각하는 것도 좀 이상한 것 같기도 하다.
-버전은 ES6를 기준으로 한다.
+버전은 ES6(ES2015)를 기준으로 한다.
 </p>
 
 <div id="outline-container-4bf4b92b" class="outline-2">
@@ -535,6 +536,14 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
+<div id="outline-container-129c57bd" class="outline-2">
+<h2 id="129c57bd">주제별 글들</h2>
+<div class="outline-text-2" id="text-129c57bd">
+<ul class="org-ul">
+<li><a href="javascript-arrow-function.html">Javascript 화살표 함수</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-0bbb90e1" class="outline-2">
 <h2 id="0bbb90e1">외부 링크</h2>
 <div class="outline-text-2" id="text-0bbb90e1">
@@ -560,7 +569,14 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
+<h2><a class="article-link-title" href="/note/javascript-arrow-function.html">Javascript 화살표 함수</a></h2>
+<div class="article-link-date">
+2020년 6월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish로 익스포트 자동화하기</a></h2>
 <div class="article-link-date">
 2020년 6월 26일 수정</div>
 </div>
