update with 4 changes

--- a/note/javascript-arrow-function.html
+++ b/note/javascript-arrow-function.html
@@ -98,7 +98,7 @@
 </pre>
 </div>
 <p>
-즉 단순한 식(expression)만 있을 경우 <code>return</code> 을 생략할 수 있다.
+즉 단순한 식(expression)만 있을 경우 <code>return</code> 과 중괄호를 생략할 수 있다.
 </p>
 
 <p>
