--- a/note/python-bytes-and-bytearray.html
+++ b/note/python-bytes-and-bytearray.html
@@ -19,7 +19,7 @@
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image:width" content="520" />
 <meta property="og:image:height" content="329" />
-<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
 <meta property="og:type" content="article" />
